--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@ body {
     padding: 4px 8px;
 }
 
-#title {
-    
-}
 
 #list {
     border-top: 1px solid #00002b ;
@@ -33,7 +30,7 @@ body {
 h1 {
     text-align: center;
     color: #00002b;
-    
+    font-size: 1.5rem;
 }
 
 #input-box {
@@ -70,7 +67,7 @@ button {
     background-color: rgb(163, 252, 163);
 }
 
-#delete-btn {
+.delete-btn {
     background-color: rgb(248, 118, 118);
 }
 
