--- a/style.css
+++ b/style.css
@@ -7,37 +7,42 @@ color blue-light - #d2d2ff
 */
 
 body {
-    display: flex;
-    justify-content: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: linear-gradient(#d2d2ff, #00002b);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: 0;
+    font-size: 1rem;
 }
 
-#main {
-    width: 600px;
-    border: 3px solid #00002b;
-    border-radius: 8px;
-    padding: 4px 8px;
-}
-
-
-#list {
-    border-top: 1px solid #00002b ;
+main {
+    background-color: whitesmoke;
+    width: 800px;
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 5px;
+    border-bottom: 3px solid #01015c;
+    border-right: 3px solid #01015c;
 }
 
 h1 {
-    text-align: center;
     color: #00002b;
     font-size: 1.5rem;
+    text-align: center;
+    margin: 0;
+    padding: 40px 0 20px;
 }
 
-#input-box {
+p {
+    margin: 0;
+    font-style: italic;
+    width: 500px;
+}
+
+.input-box {
     display: flex;
-    justify-content: space-evenly;
-    align-items:end;
-    margin: 20px 0;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 
 #task-input {
@@ -47,30 +52,35 @@ h1 {
     border: 1px solid;
 }
 
-#list-box {
+#task-list {
     margin-top: 20px;
-    font-size: 1rem;
-    border-top: 1px solid #00002b ;
+}
+
+#checkbox {
+    width: 20px;
 }
 
 button {
-    font-size: 1rem;
-    padding: 4px 16px;
+    padding: 4px 8px;
     border-radius: 10px;
-    border: 1px solid black;
-    font-weight: bold;
+    border: 1px solid #00002b;
     background-color: transparent;
 }
 
-#add-btn {
-    width: 135px;
-    background-color: rgb(163, 252, 163);
+button:hover {
+    font-weight: bold;
+    background-color: #d2d2ff;
 }
 
-.delete-btn {
-    background-color: rgb(248, 118, 118);
+ol li {
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: -20px;
+    margin-right: 20px;
 }
 
-li {
-    margin-bottom: 8px;
+.container {
+    width: 800px;
+    margin: 0 auto;
 }
